--- a/code/db.html
+++ b/code/db.html
@@ -2841,7 +2841,8 @@ NULL    | Python
   <!-- NATURAL JOIN -->
   <h3>5. NATURAL JOIN</h3>
   <p>
-    <b>Definition:</b> Automatically joins tables based on columns with the same name.
+    <li><b>Definition:</b> Automatically joins tables based on columns with the same name. </li>
+    <li>if there are no columns with the same name, then NATURAL JOIN becomes just a CROSS JOIN (Cartesian product). it pairs every row of the first table with every row of the second table.</li>
   </p>
   <pre>
 SELECT name, course_id, course_name
@@ -5093,7 +5094,7 @@ DEALLOCATE emp_cursor;
   </ul>
 </div>
 
-     <hr>
+<hr>
 
  <h1>Relational Algebra vs SQL</h1>
   <table>
@@ -5143,5 +5144,6 @@ DEALLOCATE emp_cursor;
       <td><code>AS</code></td>
     </tr>
   </table>
+  
 </body>
 </html>
