--- a/code/db.html
+++ b/code/db.html
@@ -2843,6 +2843,7 @@ NULL    | Python
   <p>
     <li><b>Definition:</b> Automatically joins tables based on columns with the same name. </li>
     <li>if there are no columns with the same name, then NATURAL JOIN becomes just a CROSS JOIN (Cartesian product). it pairs every row of the first table with every row of the second table.</li>
+    <li>Natural Join = Inner Join with automatic column matching.</li>
   </p>
   <pre>
 SELECT name, course_id, course_name
