--- a/code/db.html
+++ b/code/db.html
@@ -3228,6 +3228,70 @@ min_purchase
 
 <hr>
 
+<h1>SQL LIKE Operator</h1>
+  <p>The <code>LIKE</code> operator is used in a <code>WHERE</code> clause to search for a specified pattern in a column.</p>
+
+  <h2>Wildcards</h2>
+  <ul>
+    <li><b>%</b> → Represents zero, one, or many characters.</li>
+    <li><b>_</b> → Represents exactly one character.</li>
+  </ul>
+
+  <h2>Example Table: Customers</h2>
+  <table>
+    <tr><th>customer_id</th><th>name</th><th>city</th></tr>
+    <tr><td>1</td><td>Ravi</td><td>Delhi</td></tr>
+    <tr><td>2</td><td>Amit</td><td>Mumbai</td></tr>
+    <tr><td>3</td><td>Priya</td><td>Chennai</td></tr>
+    <tr><td>4</td><td>Vinod</td><td>Kolkata</td></tr>
+    <tr><td>5</td><td>Nisha</td><td>Delhi</td></tr>
+  </table>
+
+  <h2>1. Names starting with 'P'</h2>
+  <pre>SELECT * FROM Customers WHERE name LIKE 'P%';</pre>
+  <table>
+    <tr><th>customer_id</th><th>name</th><th>city</th></tr>
+    <tr><td>3</td><td>Priya</td><td>Chennai</td></tr>
+  </table>
+
+  <h2>2. Names ending with 'a'</h2>
+  <pre>SELECT * FROM Customers WHERE name LIKE '%a';</pre>
+  <table>
+    <tr><th>customer_id</th><th>name</th><th>city</th></tr>
+    <tr><td>3</td><td>Priya</td><td>Chennai</td></tr>
+    <tr><td>5</td><td>Nisha</td><td>Delhi</td></tr>
+  </table>
+
+  <h2>3. Names containing 'i'</h2>
+  <pre>SELECT * FROM Customers WHERE name LIKE '%i%';</pre>
+  <table>
+    <tr><th>customer_id</th><th>name</th><th>city</th></tr>
+    <tr><td>1</td><td>Ravi</td><td>Delhi</td></tr>
+    <tr><td>2</td><td>Amit</td><td>Mumbai</td></tr>
+    <tr><td>3</td><td>Priya</td><td>Chennai</td></tr>
+    <tr><td>4</td><td>Vinod</td><td>Kolkata</td></tr>
+    <tr><td>5</td><td>Nisha</td><td>Delhi</td></tr>
+  </table>
+
+  <h2>4. Second character is 'i'</h2>
+  <pre>SELECT * FROM Customers WHERE name LIKE '_i%';</pre>
+  <table>
+    <tr><th>customer_id</th><th>name</th><th>city</th></tr>
+    <tr><td>2</td><td>Amit</td><td>Mumbai</td></tr>
+    <tr><td>4</td><td>Vinod</td><td>Kolkata</td></tr>
+    <tr><td>5</td><td>Nisha</td><td>Delhi</td></tr>
+  </table>
+
+  <h2>5. Names with exactly 4 letters</h2>
+  <pre>SELECT * FROM Customers WHERE name LIKE '____';</pre>
+  <table>
+    <tr><th>customer_id</th><th>name</th><th>city</th></tr>
+    <tr><td>1</td><td>Ravi</td><td>Delhi</td></tr>
+    <tr><td>2</td><td>Amit</td><td>Mumbai</td></tr>
+  </table>
+
+  <hr>
+  
 <div class="topic">
   <h2>ORDER BY in SQL</h2>
 
