--- a/index.html
+++ b/index.html
@@ -53,67 +53,108 @@
                   flex: 0 1 100%;
               }
           }
+          .source-link {
+            display: inline-block;
+            margin: 5px;
+            padding: 6px 12px;
+            background: #2c3e50;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+          }
+          .source-link:hover {
+            background: #34495e;
+          }
+
 
      </style>
 </head>
 <body>
      <div class="container">
-          <div class="file-card">
-               <a href="./code/db.html" target="_blank" class="file-link">DB</a>
-               <a href="https://github.com/Aathi0001/html/blob/main/code/db.html" target="_blank" class="source-link">View Source Code</a>
-          </div>
-          <div class="file-card">
-               <a href="./code/java.html" target="_blank" class="file-link">Java Program</a>
-               <a href="https://github.com/Aathi0001/html/blob/main/code/java.html" target="_blank" class="source-link">View Source Code</a>
-          </div>
-          <div class="file-card">
-               <a href="./code/java_notes.html" target="_blank" class="file-link">Java Notes</a>
-               <a href="https://github.com/Aathi0001/html/blob/main/code/java_notes.html" target="_blank" class="source-link">View Source Code</a>
-          </div>
-          <div class="file-card">
-               <a href="./code/html.html" target="_blank" class="file-link">HTML</a>
-               <a href="https://github.com/Aathi0001/html/blob/main/code/html.html" target="_blank" class="source-link">View Source Code</a>
-          </div>
-          <div class="file-card">
-               <a href="./code/css_selectors.html" target="_blank" class="file-link">CSS Selectors</a>
-               <a href="https://github.com/Aathi0001/html/blob/main/code/css_selectors.html" target="_blank" class="source-link">View Source Code</a>
-          </div>
-          <div class="file-card">
-               <a href="./code/css_properties.html" target="_blank" class="file-link">CSS Properties</a>
-               <a href="https://github.com/Aathi0001/html/blob/main/code/css_properties.html" target="_blank" class="source-link">View Source Code</a>
-          </div>
-          <div class="file-card">
-               <a href="./code/css_display.html" target="_blank" class="file-link">CSS Display, Positions, etc.,</a>
-               <a href="https://github.com/Aathi0001/html/blob/main/code/css_display.html" target="_blank" class="source-link">View Source Code</a>
-          </div>
-          <div class="file-card">
-               <a href="./code/js.html" target="_blank" class="file-link">JavaScript</a>
-               <a href="https://github.com/Aathi0001/html/blob/main/code/js.html" target="_blank" class="source-link">View Source Code</a>
-               <a href="https://github.com/Aathi0001/html/blob/main/code/script.js" target="_blank" class="source-link">View Source Code JS</a>
-          </div>
-          <div class="file-card">
-               <a href="./code/position_ag.html" target="_blank" class="file-link">Display, Position, etc., Assignment</a>
-               <a href="https://github.com/Aathi0001/html/blob/main/code/position_ag.html" target="_blank" class="source-link">View Source Code</a>
-          </div>
-          <div class="file-card">
-               <a href="./code/chess.html" target="_blank" class="file-link">ChessBoard Assignment</a>
-               <a href="https://github.com/Aathi0001/html/blob/main/code/chess.html" target="_blank" class="source-link">View Source Code</a>
-          </div>
-          <div class="file-card">
-               <a href="./code/list_as.html" target="_blank" class="file-link">List Assignment</a>
-               <a href="https://github.com/Aathi0001/html/blob/main/code/list_as.html" target="_blank" class="source-link">View Source Code</a>
-          </div>
-          <div class="file-card">
-               <a href="./code/table_as.html" target="_blank" class="file-link">Table Assignment</a>
-               <a href="https://github.com/Aathi0001/html/blob/main/code/table_as.html" target="_blank" class="source-link">View Source Code</a>
-          </div>
-          <div class="file-card">
-               <a href="./code/flex_poster_as.html" target="_blank" class="file-link">Poster Assignment</a>
-               <a href="https://github.com/Aathi0001/html/blob/main/code/flex_poster_as.html" target="_blank" class="source-link">View Source Code</a>
-          </div>
-     </div>
+  <div class="file-card">
+    <a href="./code/db.html" target="_blank" class="file-link">DB</a>
+    <a href="https://github.com/Aathi0001/html/blob/main/code/db.html" target="_blank" class="source-link">View Source (GitHub)</a>
+    <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/db.html" target="_blank" class="source-link">Raw Source</a>
+  </div>
+
+  <div class="file-card">
+    <a href="./code/java.html" target="_blank" class="file-link">Java Program</a>
+    <a href="https://github.com/Aathi0001/html/blob/main/code/java.html" target="_blank" class="source-link">View Source (GitHub)</a>
+    <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/java.html" target="_blank" class="source-link">Raw Source</a>
+  </div>
+
+  <div class="file-card">
+    <a href="./code/java_notes.html" target="_blank" class="file-link">Java Notes</a>
+    <a href="https://github.com/Aathi0001/html/blob/main/code/java_notes.html" target="_blank" class="source-link">View Source (GitHub)</a>
+    <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/java_notes.html" target="_blank" class="source-link">Raw Source</a>
+  </div>
+
+  <div class="file-card">
+    <a href="./code/html.html" target="_blank" class="file-link">HTML</a>
+    <a href="https://github.com/Aathi0001/html/blob/main/code/html.html" target="_blank" class="source-link">View Source (GitHub)</a>
+    <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/html.html" target="_blank" class="source-link">Raw Source</a>
+  </div>
+
+  <div class="file-card">
+    <a href="./code/css_selectors.html" target="_blank" class="file-link">CSS Selectors</a>
+    <a href="https://github.com/Aathi0001/html/blob/main/code/css_selectors.html" target="_blank" class="source-link">View Source (GitHub)</a>
+    <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/css_selectors.html" target="_blank" class="source-link">Raw Source</a>
+  </div>
+
+  <div class="file-card">
+    <a href="./code/css_properties.html" target="_blank" class="file-link">CSS Properties</a>
+    <a href="https://github.com/Aathi0001/html/blob/main/code/css_properties.html" target="_blank" class="source-link">View Source (GitHub)</a>
+    <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/css_properties.html" target="_blank" class="source-link">Raw Source</a>
+  </div>
+
+  <div class="file-card">
+    <a href="./code/css_display.html" target="_blank" class="file-link">CSS Display, Positions, etc.</a>
+    <a href="https://github.com/Aathi0001/html/blob/main/code/css_display.html" target="_blank" class="source-link">View Source (GitHub)</a>
+    <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/css_display.html" target="_blank" class="source-link">Raw Source</a>
+  </div>
+
+  <div class="file-card">
+    <a href="./code/js.html" target="_blank" class="file-link">JavaScript</a>
+    <a href="https://github.com/Aathi0001/html/blob/main/code/js.html" target="_blank" class="source-link">View Source (GitHub)</a>
+    <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/js.html" target="_blank" class="source-link">Raw Source</a>
+    <a href="https://github.com/Aathi0001/html/blob/main/code/script.js" target="_blank" class="source-link">View Script (GitHub)</a>
+    <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/script.js" target="_blank" class="source-link">Raw Script</a>
+  </div>
+
+  <div class="file-card">
+    <a href="./code/position_ag.html" target="_blank" class="file-link">Display, Position, etc. Assignment</a>
+    <a href="https://github.com/Aathi0001/html/blob/main/code/position_ag.html" target="_blank" class="source-link">View Source (GitHub)</a>
+    <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/position_ag.html" target="_blank" class="source-link">Raw Source</a>
+  </div>
+
+  <div class="file-card">
+    <a href="./code/chess.html" target="_blank" class="file-link">ChessBoard Assignment</a>
+    <a href="https://github.com/Aathi0001/html/blob/main/code/chess.html" target="_blank" class="source-link">View Source (GitHub)</a>
+    <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/chess.html" target="_blank" class="source-link">Raw Source</a>
+  </div>
+
+  <div class="file-card">
+    <a href="./code/list_as.html" target="_blank" class="file-link">List Assignment</a>
+    <a href="https://github.com/Aathi0001/html/blob/main/code/list_as.html" target="_blank" class="source-link">View Source (GitHub)</a>
+    <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/list_as.html" target="_blank" class="source-link">Raw Source</a>
+  </div>
+
+  <div class="file-card">
+    <a href="./code/table_as.html" target="_blank" class="file-link">Table Assignment</a>
+    <a href="https://github.com/Aathi0001/html/blob/main/code/table_as.html" target="_blank" class="source-link">View Source (GitHub)</a>
+    <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/table_as.html" target="_blank" class="source-link">Raw Source</a>
+  </div>
+
+  <div class="file-card">
+    <a href="./code/flex_poster_as.html" target="_blank" class="file-link">Poster Assignment</a>
+    <a href="https://github.com/Aathi0001/html/blob/main/code/flex_poster_as.html" target="_blank" class="source-link">View Source (GitHub)</a>
+    <a href="https://raw.githubusercontent.com/Aathi0001/html/refs/heads/main/code/flex_poster_as.html" target="_blank" class="source-link">Raw Source</a>
+  </div>
+</div>
+
 </body>
 </html>
+
 
 
 
