--- a/code/css_display.html
+++ b/code/css_display.html
@@ -40,11 +40,14 @@
     border-radius: 4px;
     font-family: Consolas, monospace;
   }
-  body {
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      padding: 20px;
-    }
+    body { 
+          font-family: Arial, sans-serif; 
+          line-height: 1.6; 
+          background: #f9f9f9; 
+          padding: 20px; 
+          max-width: 100%;
+          word-wrap: break-word;
+          }
     h2 {
       color: darkblue;
       border-bottom: 2px solid #ddd;
@@ -841,6 +844,7 @@ z-index: 100; /* In front of elements with lower z-index */
 
 <h5>→ @keyframes Rule</h5>
 <p>The <code>@keyframes</code> rule defines the sequence of styles in an animation.</p>
+<p>The CSS @keyframes rule is used to control the steps in an animation sequence by defining CSS styles for points along the animation sequence.</p>
 
 <h5>→ Syntax:</h5>
 <pre>
@@ -1007,3 +1011,4 @@ Other values are optional.
 
 </body>
 </html>
+
