--- a/code/css_properties.html
+++ b/code/css_properties.html
@@ -5,6 +5,14 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Document</title>
      <style>
+      body { 
+          font-family: Arial, sans-serif; 
+          line-height: 1.6; 
+          background: #f9f9f9; 
+          padding: 20px; 
+          max-width: 100%;
+          word-wrap: break-word;
+          }
           * {
                margin: 10px;
                
