--- a/code/css_selectors.html
+++ b/code/css_selectors.html
@@ -5,6 +5,14 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>CSS Selectors</title>
      <style>
+          body { 
+          font-family: Arial, sans-serif; 
+          line-height: 1.6; 
+          background: #f9f9f9; 
+          padding: 20px; 
+          max-width: 100%;
+          word-wrap: break-word;
+          }
           *{
                margin: 10px;  
                /* Universal Selector */
