--- a/code/css_display.html
+++ b/code/css_display.html
@@ -32,6 +32,12 @@
     border-radius: 6px;
     font-family: Consolas, monospace;
   }
+  pre, table {
+    max-width: 100%;
+    overflow-x: auto;
+    display: block;
+    word-wrap: break-word;
+}
 
   code {
     color: #c62828; 
@@ -1011,4 +1017,5 @@ Other values are optional.
 
 </body>
 </html>
+
 
