--- a/code/css_properties.html
+++ b/code/css_properties.html
@@ -13,6 +13,12 @@
           max-width: 100%;
           word-wrap: break-word;
           }
+          pre, table {
+    max-width: 100%;
+    overflow-x: auto;
+    display: block;
+    word-wrap: break-word;
+}
           * {
                margin: 10px;
                
@@ -723,4 +729,5 @@ box-sizing: border-box;
 
 
 </body>
+
 </html>
