--- a/code/css_properties.html
+++ b/code/css_properties.html
@@ -15,7 +15,7 @@
           }
           pre, table {
     max-width: 100%;
-    overflow-x: auto;
+    text-wrap: wrap;
     display: block;
     word-wrap: break-word;
 }
@@ -729,4 +729,5 @@ box-sizing: border-box;
 
 
 </body>
+
 </html>
