--- a/code/css_display.html
+++ b/code/css_display.html
@@ -807,7 +807,7 @@ z-index: 100; /* In front of elements with lower z-index */
   <li><code>min-height</code> → Minimum height of screen</li>
   <li><code>max-height</code> → Maximum height of screen</li>
   <li><code>width</code> / <code>height</code> → Compare using &lt;, &gt;, &lt;=, &gt;=</li>
-  <li><code>orientation</code> → Values: <code>portrait:  width&gt;height</code>  , <code>landscape:  width&lt;height</code></li>
+  <li><code>orientation</code> → Values: <code>portrait:  width&lt;height</code>  , <code>landscape:  width&gt;height</code></li>
 </ul>
 
 <h5>→ Example: Mobile View</h5>
@@ -1017,5 +1017,6 @@ Other values are optional.
 
 </body>
 </html>
+
 
 
